--- a/app/home/home.css
+++ b/app/home/home.css
@@ -55,3 +55,93 @@ img {
 	position: relative;
 	margin: 5px;
 }
+
+.modalBG{
+    background: rgba(0,0,0,.75);
+    height: 200vh;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 100;
+}
+
+#modalForm {
+    text-align: center;
+    padding: 15px;
+    background: white;
+    position: absolute;
+    top: 20%;
+    left: 7%;
+    right: 7%;
+    -webkit-transform: translateY(-20%);
+    -ms-transform: translateY(-20%);
+    transform: translateY(-20%);
+}
+
+#exitBtn{
+	position: absolute;
+    top: 5px;
+    right: 5px;
+}
+.modalInput{
+	display: block;
+}
+select, #typeModal{
+	display: inline-block;
+}
+
+input{
+	text-align: center;
+	margin: auto;
+}
+/* The switch - the box around the slider */
+.switch {
+	position: relative;
+	display: inline-block;
+	width: 30px;
+	height: 17px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {display:none;}
+  
+  /* The slider */
+  .slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #ccc;
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  .slider:before {
+	position: absolute;
+	content: "";
+	height: 13px;
+	width: 13px;
+	left: 2px;
+	bottom: 2px;
+	background-color: white;
+	-webkit-transition: .4s;
+	transition: .4s;
+  }
+  
+  input:checked + .slider {
+	background-color: lightgreen;
+  }
+  
+  input:focus + .slider {
+	box-shadow: 0 0 1px lightgreen;
+  }
+  
+  input:checked + .slider:before {
+	-webkit-transform: translateX(13px);
+	-ms-transform: translateX(13px);
+	transform: translateX(13px);
+  }
+
